<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="359dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt03"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="367dp"
        android:layout_height="153dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="448dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt04"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="410dp"
        android:layout_height="26dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt05"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="362dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt06"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="362dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt07"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        android:buttonTint="@color/azul_500"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/ubuntu"
        android:text="@string/rdbtn01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="28dp"
        android:buttonTint="@color/azul_500"
        android:clickable="true"
        android:duplicateParentState="false"
        android:focusable="true"
        android:fontFamily="@font/ubuntu"
        android:text="@string/rdbtn02"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/azul_500"
        android:clickable="true"
        android:fontFamily="@font/ubuntu"
        android:foregroundTint="@color/azul_500"
        android:text="@string/txt08"
        android:textColorHighlight="@color/azul_500"
        android:textColorLink="@color/azul_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:focusable="true" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="43dp"
        android:backgroundTint="@color/azul_500"
        android:buttonTint="@color/azul_500"
        android:fontFamily="@font/ubuntu"
        android:text="@string/txt09"
        android:textColorHighlight="@color/azul_500"
        android:textColorLink="@color/azul_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <Button
        android:id="@+id/btn02"
        android:layout_width="61dp"
        android:layout_height="67dp"
        android:layout_marginTop="56dp"
        android:clickable="true"
        app:icon="@drawable/arrow_right_thick"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>